Texto atualizado com descrição de comandos

--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,13 @@
 <html>
 <body>
-Git com cmder
+<p>Git com cmder</p>
+<strong>Git status -> </strong>Situação do repositório</br>
+<strong>Git add {filename} -> </strong>Adiciona o arquivo ao controle de versão</br>
+<strong>Git add . -> </strong>Adiciona todos os arquivos modificados ao controle de versão</br>
+<strong>Git commit -> </strong>Salva as alterações no repositório local</br>
+<strong>Git commit -m 'texto do commit' -> </strong>Salva as alterações no repositório local já com um texto de descrição</br>
+<strong>Git rm -> </strong>Exclui as alterações no repositório local</br>
+<strong>Git commit -f -> </strong>Força a exclusão no repositório local</br>
+<strong>Git checkout -- {filename} -> </strong>Desfaz as alterações do arquivo</br>
 </body>
 </html>
