--- a/Index.html
+++ b/Index.html
@@ -9,5 +9,8 @@
 <strong>Git rm -> </strong>Exclui as alterações no repositório local</br>
 <strong>Git commit -f -> </strong>Força a exclusão no repositório local</br>
 <strong>Git checkout -- {filename} -> </strong>Desfaz as alterações do arquivo</br>
+<p>Github</p>
+<span>rferj@hotmail.com</span>
+<span>a mesma</span>
 </body>
 </html>
