--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,9 @@
 <strong>Git rm -> </strong>Exclui as alterações no repositório local</br>
 <strong>Git commit -f -> </strong>Força a exclusão no repositório local</br>
 <strong>Git checkout -- {filename} -> </strong>Desfaz as alterações do arquivo</br>
+<strong>Git config --global credential.helper 'store' -> </strong>Acesso com git-credentials. Após o primeiro push ou pull, o git armazenará usuário/senha</br>
+<strong>git config --global credential.helper 'store --file C:\Users\Estacio' -> </strong>Acesso com git-credentials. Credenciais armazenadas no arquivo indicado.</br>
+<strong>git config --global --unset credential.helper -> </strong>Remove a configuração de acesso com git-credentials</br>
 <p>Github</p>
 <span>rferj@hotmail.com</span>
 <span>a mesma</span>
