Acerto de texto e novos comandos

--- a/Index.html
+++ b/Index.html
@@ -1,17 +1,20 @@
 <html>
 <body>
 <p>Git com cmder</p>
-<strong>Git status -> </strong>Situação do repositório</br>
-<strong>Git add {filename} -> </strong>Adiciona o arquivo ao controle de versão</br>
-<strong>Git add . -> </strong>Adiciona todos os arquivos modificados ao controle de versão</br>
-<strong>Git commit -> </strong>Salva as alterações no repositório local</br>
-<strong>Git commit -m 'texto do commit' -> </strong>Salva as alterações no repositório local já com um texto de descrição</br>
-<strong>Git rm -> </strong>Exclui as alterações no repositório local</br>
-<strong>Git commit -f -> </strong>Força a exclusão no repositório local</br>
-<strong>Git checkout -- {filename} -> </strong>Desfaz as alterações do arquivo</br>
-<strong>Git config --global credential.helper 'store' -> </strong>Acesso com git-credentials. Após o primeiro push ou pull, o git armazenará usuário/senha</br>
-<strong>git config --global credential.helper 'store --file C:\Users\Estacio' -> </strong>Acesso com git-credentials. Credenciais armazenadas no arquivo indicado.</br>
+<strong>git status -> </strong>Situação do repositório</br>
+<strong>git add {filename} -> </strong>Adiciona o arquivo ao controle de versão</br>
+<strong>git add . -> </strong>Adiciona todos os arquivos modificados ao controle de versão</br>
+<strong>git commit -> </strong>Salva as alterações no repositório local</br>
+<strong>git commit -m 'texto do commit' -> </strong>Salva as alterações no repositório local já com um texto de descrição</br>
+<strong>git rm -> </strong>Exclui as alterações no repositório local</br>
+<strong>git commit -f -> </strong>Força a exclusão no repositório local</br>
+<strong>git checkout -- {filename} -> </strong>Desfaz as alterações do arquivo</br>
+<strong>git config --global credential.helper 'store' -> </strong>Acesso com git-credentials. Após o primeiro push ou pull, o git armazenará usuário/senha</br>
+<strong>git config --global credential.helper 'store --file filename' -> </strong>Acesso com git-credentials. Credenciais armazenadas no arquivo indicado.</br>
 <strong>git config --global --unset credential.helper -> </strong>Remove a configuração de acesso com git-credentials</br>
+<strong>git config --global --unset credential.helper -> </strong>Remove a configuração de acesso com git-credentials</br>
+<strong>git push --set-upstream origin master -> </strong>Envia as alterações ao repositório remoto. Nesse exemplo, master.</br>
+<strong>git pull origin master --allow-unrelated-histories -> </strong>Em caso de conflitos no push, sincroniza o repositório local com o remoto.</br>
 <p>Github</p>
 <span>rferj@hotmail.com</span>
 <span>a mesma</span>
