Alteração simples no título

--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<p>Git com cmder</p>
+<p>Git com Cmder</p>
 <strong>git status -> </strong>Situação do repositório</br>
 <strong>git add {filename} -> </strong>Adiciona o arquivo ao controle de versão</br>
 <strong>git add . -> </strong>Adiciona todos os arquivos modificados ao controle de versão</br>
