--- a/Index.html
+++ b/Index.html
@@ -15,6 +15,10 @@
 <strong>git config --global --unset credential.helper -> </strong>Remove a configuração de acesso com git-credentials</br>
 <strong>git push --set-upstream origin master -> </strong>Envia as alterações ao repositório remoto. Nesse exemplo, master.</br>
 <strong>git pull origin master --allow-unrelated-histories -> </strong>Em caso de conflitos no push, sincroniza o repositório local com o remoto.</br>
+<strong>git log -> </strong>Exibe o histórico de operações na Branch. O mesmo que examinar os commits no Github.</br>
+<p>Comandos Cmder</p>
+<strong>ctrl + l -> </strong>Limpa a console.</br>
+<strong>q + enter -> </strong>Sai do comando <strong>git log</strong>.</br>
 <p>Github</p>
 <span>rferj@hotmail.com</span>
 <span>a mesma</span>
