--- a/Index.html
+++ b/Index.html
@@ -16,6 +16,7 @@
 <strong>git push --set-upstream origin master -> </strong>Envia as alterações ao repositório remoto. Nesse exemplo, master.</br>
 <strong>git pull origin master --allow-unrelated-histories -> </strong>Em caso de conflitos no push, sincroniza o repositório local com o remoto.</br>
 <strong>git log -> </strong>Exibe o histórico de operações na Branch. O mesmo que examinar os commits no Github.</br>
+<strong>git branch -> </strong>Lista todos os branchs catalogados.</br>
 <p>Comandos Cmder</p>
 <strong>ctrl + l -> </strong>Limpa a console.</br>
 <strong>q + enter -> </strong>Sai do comando <strong>git log</strong>.</br>
