Novo comando git.init

--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
 <strong>git config --global credential.helper 'store --file filename' -> </strong>Acesso com git-credentials. Credenciais armazenadas no arquivo indicado.</br>
 <strong>git config --global --unset credential.helper -> </strong>Remove a configuração de acesso com git-credentials</br>
 <strong>git config --global --unset credential.helper -> </strong>Remove a configuração de acesso com git-credentials</br>
+<strong>git init -> </strong>Prepara a pasta para ser um repositório local</br>
 <strong>git status -> </strong>Situação do repositório</br>
 <strong>git add {filename} -> </strong>Adiciona o arquivo ao controle de versão</br>
 <strong>git add . -> </strong>Adiciona todos os arquivos modificados ao controle de versão</br>
