--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<p><h4>Git com Cmder</h4></p>
+<p><h4>Git com Cmder/Github</h4></p>
 <strong>git config --global credential.helper 'store' -> </strong>Acesso com git-credentials. Após o primeiro push ou pull, o git armazenará usuário/senha</br>
 <strong>git config --global credential.helper 'store --file filename' -> </strong>Acesso com git-credentials. Credenciais armazenadas no arquivo indicado.</br>
 <strong>git config --global --unset credential.helper -> </strong>Remove a configuração de acesso com git-credentials</br>
