Detalhamento do novo comando

--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,7 @@
 <strong>git checkout {branch_name} -> </strong>Ativa a branch informada.</br>
 <strong>git checkout -b {branch_name} -> </strong>Cria e ativa uma nova branch local.</br>
 <strong>git push -u origin {branch_name} -> </strong>Cria a branch no repositório remoto e sincroniza o trabalho.</br>
-<strong>git push origin --delete features/multiple -></strong>
+<strong>git push origin --delete features/multiple -></strong>Remove a branch remota.</br>
 <strong>git config --get core.excludesfile -> </strong>Informa onde está o arquivo .gitignore</br>
 <strong>git config --global core.excludesfile '~/.gitignore' -> </strong>Configura o arquivo .gitignore</br>
 <p></p>
