Mudança de título

--- a/Index.html
+++ b/Index.html
@@ -28,10 +28,17 @@
 <strong>git config --get core.excludesfile -> </strong>Informa onde está o arquivo .gitignore</br>
 <strong>git config --global core.excludesfile '~/.gitignore' -> </strong>Configura o arquivo .gitignore</br>
 <p></p>
+<p>Stash</p>
+<strong>git stash -> </strong>Salva as alterações em uma lista de alterações, sem commit</br>
+<strong>git stash save <mensagem> -> </strong>Salva as alterações em uma lista de alterações com uma descrição, sem commit</br>
+<strong>git stash show -> </strong>Lista os arquivos alterados no último stash</br>
+<strong>git stash clear -> </strong>Remove todos os stashs</br>
+<strong>git stash pop -> </strong>Recupera as alterações no último stash</br>
+<strong>git stash pop [identifier] -> </strong>Recupera as alterações salvas no stash indicado</br>
 <p>Comandos Cmder</p>
 <strong>ctrl + l -> </strong>Limpa a console.</br>
 <strong>q + enter -> </strong>Sai do comando <strong>git log</strong>.</br>
-<p>Github</p>
+<p>Acesso ao Github</p>
 <span>rferj@hotmail.com</span>
 <span>a mesma</span>
 </body>
