Inclusão de comando

--- a/Index.html
+++ b/Index.html
@@ -19,6 +19,7 @@
 <strong>git pull origin master --allow-unrelated-histories -> </strong>Em caso de conflitos no push, sincroniza o repositório local com o remoto.</br>
 <strong>git log -> </strong>Exibe o histórico de operações na Branch. O mesmo que examinar os commits no Github.</br>
 <strong>git branch -> </strong>Lista todos os branchs catalogados. A branch em verde é a branch ativa.</br>
+<strong>git branch -r -> </strong>Lista todos os branchs remotos.</br>
 <strong>git branch -a -> </strong>Lista todos os branchs catalogados, locais e remotos.</br>
 <strong>git branch -D {branch_name} -> </strong>Remove a branch local.</br>
 <strong>git checkout {branch_name} -> </strong>Ativa a branch informada.</br>
